typescript/checker/tests/conformance/ambient/ambientShorthand_reExport.ts.stderr
error: ResolvedFailed {
    span: Span {
        lo: BytePos(
            206,
        ),
        hi: BytePos(
            236,
        ),
        ctxt: #0,
    },
    base: "$DIR/tests/conformance/ambient",
    src: Atom('./reExportX' type=dynamic),
}
  --> $DIR/tests/conformance/ambient/ambientShorthand_reExport.ts:11:1
   |
11 | import {x} from "./reExportX";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

